--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,13 +3,23 @@
   justify-content: space-between;
   align-items: center;
   padding: 16px 24px;
-  background: #111827;
   color: white;
+  background-color: #faf9f3;
+  height: 40px;
+  border-bottom: 1px solid #d1d5db;
 
   .left {
     font-size: 20px;
     font-weight: 600;
     cursor: pointer;
+    color: #b31859;
+
+    .one {
+      font-weight: 200;
+    }
+    .two {
+      font-weight: 700;
+    }
   }
 
   .right {
@@ -19,15 +29,46 @@
   }
 
   .exit-btn {
-    padding: 8px 14px;
-    background: #ef4444;
-    border: none;
-    border-radius: 6px;
-    color: white;
+    padding: 10px 28px;
+    border: 1.5px solid #d24c73;
+    background: transparent;
+    color: #d24c73;
+    border-radius: 8px;
     cursor: pointer;
+    font-size: 14px;
+
+    &:hover {
+      background: #d24c73;
+      color: white;
+    }
   }
 
   .user-name {
     font-weight: 500;
   }
+}
+
+.user-block {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.avatar {
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  background: #2d2b4e;
+  color: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 600;
+  font-size: 14px;
+}
+
+.user-name {
+  font-weight: 500;
+  color: #2d2b4e;
+  font-size: 14px;
 }
