--- a/src/layout/Layout.scss
+++ b/src/layout/Layout.scss
@@ -4,6 +4,6 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  background-color: #15202b;
-  color: white;
+  background-color: #faf9f3;
+  color: black;
 }
